--- a/.env
+++ b/.env
@@ -30,5 +30,5 @@ DATABASE_URL="mysql://root:root@127.0.0.1:3306/Recette_Facile?serverVersion=5.7"
 ###> lexik/jwt-authentication-bundle ###
 JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
-JWT_PASSPHRASE=3d582b396158787f19f919d744961b17
+JWT_PASSPHRASE=salut
 ###< lexik/jwt-authentication-bundle ###
